--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Closet Scanner</title>
+  <link rel="manifest" href="data:application/manifest+json,{
+    \"name\": \"Closet Scanner\",
+    \"short_name\": \"Scanner\",
+    \"start_url\": \".\",
+    \"display\": \"standalone\",
+    \"background_color\": \"#f0f0f0\",
+    \"theme_color\": \"#4CAF50\",
+    \"icons\": [{
+      \"src\": \"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E📦%3C/text%3E%3C/svg%3E\",
+      \"sizes\": \"192x192\",
+      \"type\": \"image/svg+xml\"
+    }]
+  }">
   <style>
-    body { font-family: sans-serif; text-align: center; margin: 20px; background: #f0f0f0; }
+    body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; text-align: center; margin: 20px; background: #f0f0f0; }
     #video { width: 100%; max-width: 400px; border-radius: 12px; display: none; }
-    button { margin: 15px; padding: 15px; font-size: 18px; background: #4CAF50; color: white; border: none; border-radius: 8px; }
+    button { margin: 15px; padding: 15px; font-size: 18px; background: #4CAF50; color: white; border: none; border-radius: 8px; width: 80%; }
     #status { font-weight: bold; margin: 15px; color: green; }
     .error { color: red; }
   </style>
@@ -16,9 +29,9 @@
   <h2>Supply Closet Scanner</h2>
   <button id="startBtn">Start Camera</button>
   <video id="video" autoplay playsinline muted></video>
-  <p id="status">Tap button to start...</p>
-  <input id="name_input" placeholder="Enter item name" style="display:none; width:80%; padding:10px; margin:10px;">
-  <button id="save_btn" style="display:none">Save Name</button>
+  <p id="status">Tap to start...</p>
+  <input id="name_input" placeholder="Item name" style="display:none; width:80%; padding:12px; margin:10px; font-size:16px;">
+  <button id="save_btn" style="display:none">Save</button>
 
   <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.18.0/umd/index.min.js"></script>
   <script>
@@ -36,14 +49,14 @@
 
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ 
-          video: { facingMode: "environment", width: 640, height: 480 } 
+          video: { facingMode: "environment", width: { ideal: 640 }, height: { ideal: 480 } } 
         });
         video.srcObject = stream;
         video.style.display = 'block';
         startBtn.style.display = 'none';
         status.innerText = "Scanning...";
 
-        codeReader.decodeFromVideoDevice(null, 'video', (result, err) => {
+        codeReader.decodeFromVideoDevice(null, 'video', (result) => {
           if (result) {
             currentBarcode = result.text;
             status.innerText = `Found: ${currentBarcode}`;
@@ -57,12 +70,11 @@
                 } else {
                   status.innerText = `${data.action.toUpperCase()}: ${data.qty}`;
                 }
-              })
-              .catch(() => status.innerText = "API error");
+              });
           }
         });
       } catch (err) {
-        status.innerHTML = `<span class="error">Camera failed: ${err.message}<br>Try: Settings → Site settings → Camera → Allow</span>`;
+        status.innerHTML = `<span class="error">Camera blocked.<br>1. Add to Home Screen<br>2. Open from icon<br>3. Allow camera</span>`;
         startBtn.disabled = false;
         startBtn.textContent = "Try Again";
       }
