--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
     \"display\": \"standalone\",
     \"background_color\": \"#f0f0f0\",
     \"theme_color\": \"#4CAF50\",
-    \"icons\": [{
-      \"src\": \"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E📦%3C/text%3E%3C/svg%3E\",
-      \"sizes\": \"192x192\",
-      \"type\": \"image/svg+xml\"
-    }]
+    \"icons\": [{\"src\": \"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E📦%3C/text%3E%3C/svg%3E\", \"sizes\": \"192x192\", \"type\": \"image/svg+xml\"}]
   }">
   <style>
-    body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; text-align: center; margin: 20px; background: #f0f0f0; }
+    body { font-family: -apple-system, sans-serif; text-align: center; margin: 20px; background: #f0f0f0; }
     #video { width: 100%; max-width: 400px; border-radius: 12px; display: none; }
     button { margin: 15px; padding: 15px; font-size: 18px; background: #4CAF50; color: white; border: none; border-radius: 8px; width: 80%; }
     #status { font-weight: bold; margin: 15px; color: green; }
@@ -74,7 +70,7 @@
           }
         });
       } catch (err) {
-        status.innerHTML = `<span class="error">Camera blocked.<br>1. Add to Home Screen<br>2. Open from icon<br>3. Allow camera</span>`;
+        status.innerHTML = `<span class="error">Camera blocked.<br>Add to Home Screen → Open from icon → Allow camera</span>`;
         startBtn.disabled = false;
         startBtn.textContent = "Try Again";
       }
