--- a/index.html
+++ b/index.html
@@ -4,73 +4,89 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Closet Scanner</title>
+
+  <!-- 1. Proper Web App Manifest (separate file is better, but inline works) -->
   <link rel="manifest" href="data:application/manifest+json,{
-    \"name\": \"Closet Scanner\",
-    \"short_name\": \"Scanner\",
-    \"start_url\": \".\",
-    \"display\": \"standalone\",
-    \"background_color\": \"#f0f0f0\",
-    \"theme_color\": \"#4CAF50\",
-    \"icons\": [{\"src\": \"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E📦%3C/text%3E%3C/svg%3E\", \"sizes\": \"192x192\", \"type\": \"image/svg+xml\"}]
+    \"name\":\"Closet Scanner\",
+    \"short_name\":\"Scanner\",
+    \"start_url\":\".\",
+    \"display\":\"standalone\",
+    \"background_color\":\"#f0f0f0\",
+    \"theme_color\":\"#4CAF50\",
+    \"icons\":[{\"src\":\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E%F0%9F%93%A6%3C/text%3E%3C/svg%3E\",\"sizes\":\"192x192\",\"type\":\"image/svg+xml\"}]
   }">
+
   <style>
-    body { font-family: -apple-system, sans-serif; text-align: center; margin: 20px; background: #f0f0f0; }
-    #video { width: 100%; max-width: 400px; border-radius: 12px; display: none; }
-    button { margin: 15px; padding: 15px; font-size: 18px; background: #4CAF50; color: white; border: none; border-radius: 8px; width: 80%; }
-    #status { font-weight: bold; margin: 15px; color: green; }
-    .error { color: red; }
+    body {font-family:-apple-system,sans-serif;margin:20px;background:#f0f0f0;text-align:center;}
+    #video {width:100%;max-width:400px;border-radius:12px;display:none;}
+    button {margin:15px;padding:15px;font-size:18px;background:#4CAF50;color:#fff;border:none;border-radius:8px;width:80%;}
+    #status {margin:15px;font-weight:bold;color:green;}
+    .error {color:red;}
+    input {width:80%;padding:12px;margin:10px;font-size:16px;display:none;}
   </style>
 </head>
 <body>
   <h2>Supply Closet Scanner</h2>
   <button id="startBtn">Start Camera</button>
   <video id="video" autoplay playsinline muted></video>
-  <p id="status">Tap to start...</p>
-  <input id="name_input" placeholder="Item name" style="display:none; width:80%; padding:12px; margin:10px; font-size:16px;">
-  <button id="save_btn" style="display:none">Save</button>
+  <p id="status">Tap to start…</p>
+
+  <input id="name_input" placeholder="Item name">
+  <button id="save_btn">Save</button>
 
   <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.18.0/umd/index.min.js"></script>
   <script>
     const API = "https://script.google.com/macros/s/AKfycbyKHzGyNnNYlR6qqqIimpAFO8P7W7tqka9dyHtqTgihCv3Nxoy7vhx84PbXASAmfslU/exec";
     let currentBarcode = null;
     const codeReader = new ZXing.BrowserMultiFormatReader();
-    const video = document.getElementById('video');
-    const startBtn = document.getElementById('startBtn');
-    const status = document.getElementById('status');
+    const videoEl   = document.getElementById('video');
+    const startBtn  = document.getElementById('startBtn');
+    const status    = document.getElementById('status');
 
     startBtn.onclick = async () => {
       startBtn.disabled = true;
-      startBtn.textContent = "Starting...";
-      status.innerText = "Requesting camera...";
+      startBtn.textContent = "Starting…";
+      status.textContent = "Requesting camera…";
 
       try {
-        const stream = await navigator.mediaDevices.getUserMedia({ 
-          video: { facingMode: "environment", width: { ideal: 640 }, height: { ideal: 480 } } 
+        /* 2. Critical constraints for iOS/Android */
+        const stream = await navigator.mediaDevices.getUserMedia({
+          video: {
+            facingMode: "environment",          // back camera
+            width:  { ideal: 1280 },            // higher resolution helps ZXing
+            height: { ideal: 720 }
+          },
+          audio: false
         });
-        video.srcObject = stream;
-        video.style.display = 'block';
-        startBtn.style.display = 'none';
-        status.innerText = "Scanning...";
 
-        codeReader.decodeFromVideoDevice(null, 'video', (result) => {
+        videoEl.srcObject = stream;
+        videoEl.style.display = "block";
+        startBtn.style.display = "none";
+        status.textContent = "Scanning…";
+
+        codeReader.decodeFromVideoDevice(null, videoEl, (result, err) => {
           if (result) {
-            currentBarcode = result.text;
-            status.innerText = `Found: ${currentBarcode}`;
-            codeReader.reset();
+            currentBarcode = result.getText();
+            status.textContent = `Found: ${currentBarcode}`;
+            codeReader.reset();               // stop scanning
+
             fetch(`${API}?code=${currentBarcode}`)
               .then(r => r.json())
               .then(data => {
                 if (data.action === "ask_name") {
-                  document.getElementById('name_input').style.display = 'block';
-                  document.getElementById('save_btn').style.display = 'block';
+                  document.getElementById('name_input').style.display = "block";
+                  document.getElementById('save_btn').style.display = "block";
                 } else {
-                  status.innerText = `${data.action.toUpperCase()}: ${data.qty}`;
+                  status.textContent = `${data.action.toUpperCase()}: ${data.qty}`;
                 }
               });
           }
         });
-      } catch (err) {
-        status.innerHTML = `<span class="error">Camera blocked.<br>Add to Home Screen → Open from icon → Allow camera</span>`;
+
+      } catch (e) {
+        status.innerHTML = `<span class="error">Camera blocked.<br>
+          <strong>iOS:</strong> Add to Home Screen → Open from icon → Allow camera<br>
+          <strong>Android:</strong> Same flow or check Settings → Site settings</span>`;
         startBtn.disabled = false;
         startBtn.textContent = "Try Again";
       }
@@ -81,9 +97,9 @@
       if (name && currentBarcode) {
         fetch(`${API}?code=${currentBarcode}&name=${encodeURIComponent(name)}`)
           .then(() => {
-            status.innerText = `Added: ${name}`;
-            document.getElementById('name_input').style.display = 'none';
-            document.getElementById('save_btn').style.display = 'none';
+            status.textContent = `Added: ${name}`;
+            document.getElementById('name_input').style.display = "none";
+            document.getElementById('save_btn').style.display = "none";
             document.getElementById('name_input').value = "";
             setTimeout(() => codeReader.reset(), 2000);
           });
