--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Closet Scanner</title>
-
-  <!-- 1. Proper Web App Manifest (separate file is better, but inline works) -->
   <link rel="manifest" href="data:application/manifest+json,{
     \"name\":\"Closet Scanner\",
     \"short_name\":\"Scanner\",
@@ -15,12 +13,11 @@
     \"theme_color\":\"#4CAF50\",
     \"icons\":[{\"src\":\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E%F0%9F%93%A6%3C/text%3E%3C/svg%3E\",\"sizes\":\"192x192\",\"type\":\"image/svg+xml\"}]
   }">
-
   <style>
     body {font-family:-apple-system,sans-serif;margin:20px;background:#f0f0f0;text-align:center;}
     #video {width:100%;max-width:400px;border-radius:12px;display:none;}
     button {margin:15px;padding:15px;font-size:18px;background:#4CAF50;color:#fff;border:none;border-radius:8px;width:80%;}
-    #status {margin:15px;font-weight:bold;color:green;}
+    #status {margin:15px;font-weight:bold;color:green; white-space: pre-wrap;}
     .error {color:red;}
     input {width:80%;padding:12px;margin:10px;font-size:16px;display:none;}
   </style>
@@ -30,18 +27,16 @@
   <button id="startBtn">Start Camera</button>
   <video id="video" autoplay playsinline muted></video>
   <p id="status">Tap to start…</p>
-
   <input id="name_input" placeholder="Item name">
   <button id="save_btn">Save</button>
-
   <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.18.0/umd/index.min.js"></script>
   <script>
     const API = "https://script.google.com/macros/s/AKfycbyKHzGyNnNYlR6qqqIimpAFO8P7W7tqka9dyHtqTgihCv3Nxoy7vhx84PbXASAmfslU/exec";
     let currentBarcode = null;
     const codeReader = new ZXing.BrowserMultiFormatReader();
-    const videoEl   = document.getElementById('video');
-    const startBtn  = document.getElementById('startBtn');
-    const status    = document.getElementById('status');
+    const videoEl = document.getElementById('video');
+    const startBtn = document.getElementById('startBtn');
+    const status = document.getElementById('status');
 
     startBtn.onclick = async () => {
       startBtn.disabled = true;
@@ -49,11 +44,10 @@
       status.textContent = "Requesting camera…";
 
       try {
-        /* 2. Critical constraints for iOS/Android */
         const stream = await navigator.mediaDevices.getUserMedia({
           video: {
-            facingMode: "environment",          // back camera
-            width:  { ideal: 1280 },            // higher resolution helps ZXing
+            facingMode: "environment",
+            width: { ideal: 1280 },
             height: { ideal: 720 }
           },
           audio: false
@@ -64,29 +58,35 @@
         startBtn.style.display = "none";
         status.textContent = "Scanning…";
 
-        codeReader.decodeFromVideoDevice(null, videoEl, (result, err) => {
-          if (result) {
-            currentBarcode = result.getText();
-            status.textContent = `Found: ${currentBarcode}`;
-            codeReader.reset();               // stop scanning
+        // Add a short delay to ensure video is ready
+        await videoEl.play();
+        setTimeout(() => {
+          codeReader.decodeFromVideoDevice(null, videoEl, (result, err) => {
+            if (result) {
+              currentBarcode = result.text;
+              status.textContent = `Found: ${currentBarcode}`;
+              codeReader.reset();
 
-            fetch(`${API}?code=${currentBarcode}`)
-              .then(r => r.json())
-              .then(data => {
-                if (data.action === "ask_name") {
-                  document.getElementById('name_input').style.display = "block";
-                  document.getElementById('save_btn').style.display = "block";
-                } else {
-                  status.textContent = `${data.action.toUpperCase()}: ${data.qty}`;
-                }
-              });
-          }
-        });
+              fetch(`${API}?code=${currentBarcode}`)
+                .then(r => r.json())
+                .then(data => {
+                  if (data.action === "ask_name") {
+                    document.getElementById('name_input').style.display = "block";
+                    document.getElementById('save_btn').style.display = "block";
+                  } else {
+                    status.textContent = `${data.action.toUpperCase()}: ${data.qty}`;
+                  }
+                });
+            }
+            if (err && !(err instanceof ZXing.NotFoundException)) {
+              status.innerHTML = `<span class="error">Scan error: ${err.message}</span>`;
+            }
+          });
+        }, 500); // 0.5s delay for video to initialize
 
       } catch (e) {
-        status.innerHTML = `<span class="error">Camera blocked.<br>
-          <strong>iOS:</strong> Add to Home Screen → Open from icon → Allow camera<br>
-          <strong>Android:</strong> Same flow or check Settings → Site settings</span>`;
+        status.innerHTML = `<span class="error">Error: ${e.name} - ${e.message}<br>
+          Fix tips:<br>- Use HTTPS URL<br>- Add to Home Screen & launch from icon<br>- Check OS privacy settings<br>- Restart device/browser</span>`;
         startBtn.disabled = false;
         startBtn.textContent = "Try Again";
       }
